--- a/samplersFramework/src/main/res/layout/fragment_sound_record.xml
+++ b/samplersFramework/src/main/res/layout/fragment_sound_record.xml
@@ -29,24 +29,12 @@
         android:layout_marginBottom="64dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnPause"
-        android:textAllCaps="true"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_marginLeft="10dp"
-        android:layout_alignBaseline="@+id/btnStart"
-        android:layout_alignBottom="@+id/btnStart"
-        android:layout_alignParentStart="true" />
-
-    <Button
         android:id="@+id/btnStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        android:layout_alignBaseline="@+id/bt_next"
-        android:layout_alignBottom="@+id/bt_next"
-        android:layout_toStartOf="@+id/bt_next" />
+        android:text="@string/start_recording_button"
+        android:layout_below="@+id/progressBar"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/bt_next"
