--- a/samplersFramework/src/main/res/layout/fragment_sound_record.xml
+++ b/samplersFramework/src/main/res/layout/fragment_sound_record.xml
@@ -4,6 +4,32 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btnPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/play_recorded"
+        android:layout_below="@+id/seekbar"
+        android:layout_centerHorizontal="true" />
+
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lbSoundFile"
+        android:layout_alignStart="@+id/lbSoundFile" />
+
+    <TextView
+        android:id="@+id/lbSoundFile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:fontFamily="sans-serif-condensed"
+        android:text="file_name.mp4"
+        android:textSize="18sp"
+        android:layout_below="@+id/btnStart"
+        android:layout_centerHorizontal="true" />
+
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/progressBar"
@@ -34,7 +60,7 @@
         android:layout_height="wrap_content"
         android:text="@string/start_recording_button"
         android:layout_below="@+id/progressBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignEnd="@+id/chronometer" />
 
     <Button
         android:id="@+id/bt_next"
