--- a/samplersFramework/src/main/res/layout/fragment_playback.xml
+++ b/samplersFramework/src/main/res/layout/fragment_playback.xml
@@ -52,7 +52,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
 
-                <android.support.design.widget.FloatingActionButton
+                <Button
                     android:id="@+id/fab_play"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                     android:layout_marginTop="10dp"
                     android:clickable="true">
 
-                </android.support.design.widget.FloatingActionButton>
+                </Button>
 
                 <TextView
                     android:id="@+id/file_length_text_view"
