--- a/samplersFramework/src/main/res/layout/fragment_sound_record.xml
+++ b/samplersFramework/src/main/res/layout/fragment_sound_record.xml
@@ -9,15 +9,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_recorded"
-        android:layout_above="@+id/bt_next"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="23dp" />
+        android:layout_alignBaseline="@+id/bt_next"
+        android:layout_alignBottom="@+id/bt_next"
+        android:layout_alignParentStart="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/progressBar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
         android:progressDrawable="@drawable/record_progress_bar"
         android:background="@drawable/record_progress_bar_background"
         android:indeterminate="false"
@@ -32,16 +32,18 @@
         android:id="@+id/chronometer"
         android:textSize="60sp"
         android:fontFamily="sans-serif-light"
-        android:layout_alignBottom="@+id/progressBar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="64dp"/>
+        android:layout_marginTop="44dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/btnStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/start_recording_button"
-        android:layout_below="@+id/progressBar"
+         android:id="@+id/btnStart"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:drawableTop="@drawable/ic_launcher"
+         android:drawablePadding="-10dp"
+        android:layout_marginBottom="42dp"
+        android:layout_above="@+id/bt_next"
         android:layout_alignEnd="@+id/chronometer" />
 
     <Button
@@ -59,12 +61,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/recording_status_text"
+        android:text="@string/bt_next"
         android:textStyle="bold"
         android:textSize="17sp"
         android:textColor="#000000"
         android:fontFamily="sans-serif-condensed"
-        android:layout_above="@+id/btnStart"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp" />
+        />
 
 </RelativeLayout>
