--- a/samplersFramework/src/main/res/layout/fragment_sound_record.xml
+++ b/samplersFramework/src/main/res/layout/fragment_sound_record.xml
@@ -11,7 +11,7 @@
         android:text="@string/play_recorded"
         android:layout_alignBaseline="@+id/bt_next"
         android:layout_alignBottom="@+id/bt_next"
-        android:layout_alignParentStart="true" />
+        android:layout_toStartOf="@+id/btnStart" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -79,5 +79,83 @@
         app:srcCompat="@drawable/ic_launcher"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/mediaplayer_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        card_view:cardElevation="3dp"
+        android:transitionName="open_mediaplayer"
+        android:layout_centerHorizontal="true">
+
+    </android.support.v7.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:layout_below="@+id/btnStart"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:id="@+id/file_name_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
+            android:fontFamily="sans-serif-condensed"
+            android:text="file_name.mp4"
+            android:textSize="18sp" />
+
+        <SeekBar
+            android:id="@+id/seekbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/current_progress_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="10dp"
+                android:text="00:00" />
+
+            <Button
+                android:id="@+id/fab_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:clickable="true">
+
+            </Button>
+
+            <TextView
+                android:id="@+id/file_length_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="10dp"
+                android:text="00:00" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
