--- a/samplersFramework/src/main/res/layout/fragment_sound_record.xml
+++ b/samplersFramework/src/main/res/layout/fragment_sound_record.xml
@@ -4,14 +4,42 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnPlay"
+    <ImageButton
+        android:id="@+id/btn_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/play_recorded"
-        android:layout_alignBaseline="@+id/bt_next"
-        android:layout_alignBottom="@+id/bt_next"
-        android:layout_toStartOf="@+id/btnStart" />
+        app:srcCompat="@drawable/ic_media_play"
+        android:layout_below="@+id/current_progress_text_view"
+        android:layout_alignStart="@+id/btnStart" />
+
+    <TextView
+        android:id="@+id/current_progress_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="00:00"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignStart="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/file_length_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:text="00:00"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignEnd="@+id/linearLayout" />
+
+    <Button
+        android:id="@+id/bt_next"
+        app:srcCompat="@drawable/ic_media_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="30dp"
+        android:text="@string/bt_next" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -23,7 +51,6 @@
         android:indeterminate="false"
         android:max="100"
         android:progress="0"
-        android:layout_marginTop="7dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -48,17 +75,6 @@
            android:layout_alignEnd="@+id/chronometer" /> -->
          <!--  android:drawableTop="@drawable/ic_launcher" -->
 
-
-    <Button
-        android:id="@+id/bt_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/bt_next"
-        android:layout_marginRight="30dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -100,18 +116,8 @@
         android:layout_marginTop="16dp"
         android:orientation="vertical"
         android:layout_below="@+id/btnStart"
-        android:layout_alignParentEnd="true">
-
-        <TextView
-            android:id="@+id/file_name_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="7dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="sans-serif-condensed"
-            android:text="file_name.mp4"
-            android:textSize="18sp" />
+        android:layout_alignParentEnd="true"
+        android:id="@+id/linearLayout">
 
         <SeekBar
             android:id="@+id/seekbar"
@@ -121,38 +127,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/current_progress_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="10dp"
-                android:text="00:00" />
-
-            <Button
-                android:id="@+id/fab_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:clickable="true">
-
-            </Button>
-
-            <TextView
-                android:id="@+id/file_length_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="10dp"
-                android:text="00:00" />
 
         </RelativeLayout>
 
